--- a/Index.html
+++ b/Index.html
@@ -34,8 +34,8 @@
 <body>
     <div class="loader">
         <h2>Website Loader</h2>
-        <form>
-            <input type="text" placeholder="Enter website URL" required>
+        <form action="https://www.google.com/search" method="GET" target="_blank">
+            <input type="text" name="q" placeholder="Enter website URL" required>
             <br><br>
             <input type="submit" value="Load Website">
         </form>
