--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Website Loader</title>
+    <title>Search Engine</title>
     <style>
         body {
             display: flex;
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="loader">
-        <h2>Website Loader</h2>
+        <h2>Search Engine</h2>
         <form action="https://www.google.com/search" method="GET" target="_blank">
             <input type="text" name="q" placeholder="Enter website URL" required>
             <br><br>
