--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
     <div class="loader">
         <h2>Search Engine</h2>
         <form action="https://www.google.com/search" method="GET" target="_blank">
-            <input type="text" name="q" placeholder="Enter website URL or search query" required>
+            <input type="text" name="q" placeholder="Enter website URL or query" required>
             <br><br>
             <input type="submit" value="Load Website">
         </form>
